# rust-soapysdr

./: .travis.yml  Cargo.toml
soapysdr-sys/: Cargo.toml  build.rs
soapysdr-sys/src/: lib.rs
src/: arginfo.rs  args.rs  device.rs  format.rs  lib.rs
