[workspace]
[package]
name = "soapysdr"
version = "0.1.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
categories = ["api-bindings", "hardware-support"]
keywords = ["ffi", "sdr", "radio", "rtlsdr", "hackrf", "usrp", "limesdr", "bladerf", "airspy"]
description = "Hardware abstraction layer for many software defined radio devices."
license = "BSL-1.0/Apache-2.0"
documentation = "https://kevinmehall.net/rustdoc/soapysdr/soapysdr/"
repository = "https://github.com/kevinmehall/rust-soapysdr"
readme = "README.md"

[dependencies]
soapysdr-sys = { version = "0.6.0", path = "./soapysdr-sys" }
libc = "0.2.20"
num-complex = "0.1.37"
log = { version = "0.3", optional = true }

# Dependencies used only by binaries
# (https://github.com/rust-lang/cargo/issues/1982)
byteorder = { version = "1.1", optional = true }
getopts = { version = "0.2.4", optional = true }
signalbool = { version = "0.2.0", optional = true }
structopt = { version = "0.1.7", optional = true }
structopt-derive = { version = "0.1.6", optional = true }
rand = { version = "0.4.2", optional = true }


[features]
default = ["log","examples"]
binaries = ["byteorder", "getopts", "signalbool"]
examples = ["rand","structopt","structopt-derive","rand"]

[[bin]]
name = "soapy-sdr-info"
path = "src/bin/soapy-sdr-info.rs"
required-features = ["binaries"]

[[bin]]
name = "soapy-sdr-stream"
path = "src/bin/soapy-sdr-stream.rs"
required-features = ["binaries"]

[[bin]]
name = "soapy-uhd-example"
path = "src/bin/soapy-uhd-example.rs"
required-features = ["examples"]
